codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_review_background_event_renders_reviewed_command.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Reviewing approval request: rm -rf '/tmp/guardian target' (0s • esc t…


› Ask Codex to do anything

  ? for shortcuts                                    100% context left
