codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_without_denied_request.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---





⚠ Automatic approval review timed out before it could finish evaluating this
  action. The action was not intentionally rejected, and a retry may succeed.

• Working (0s • esc to interrupt)


› Ask Codex to do anything

  ? for shortcuts                                                                                                        100% context left
